--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf=8">
+		<title>XYZ Corp</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="./css/bootstrap.css" rel="stylesheet">
 		<link href="./css/jquery.css" rel="stylesheet">
 		<link href="./css/styles.css" rel="stylesheet">
@@ -9,58 +12,83 @@
 		<div class="container">
 			<!-- nav bar here !-->
 			<header>
-				<div class="row">
+				<div class="row" style="background-color:powderblue">
+					<div class="col-md-6">
 					<img src="./img/logo.png" alt="XYC Corp">
+					</div>
+					<div class="col-md-6">
 					<p>Creating Things...and Stuff</p>
+					</div>
 				</div>
-				<nav>
-			<ul class="nav">
-				<li role="presentation"><a href="#">WHO WE ARE</a></li>
-				<li role="presentation"><a href="#">WHAT WE DO</a></li>
-				<li role="presentation"><a href="#">WHAT KIND OF THINGS</a></li>
-				<li role="presentation"><a href="#">WHAT SORT OF STUFF</a></li>
-				<li role="presentation"><a href="#">CONTACT</a></li>
-				
-			</ul>
-				</nav>
 			</header>
+			<nav>
+				<ul class="nav navbar-nav">
+					<li><a href="#">WHO WE ARE</a></li>
+					<li><a href="#">WHAT WE DO</a></li>
+					<li><a href="#">WHAT KIND OF THINGS</a></li>
+					<li><a href="#">WHAT SORT OF STUFF</a></li>
+					<li><a href="#">CONTACT</a></li>
+				</ul>
+			</nav>
+			<main>
 			<div class="row">
 				<div class="col-xs-12 col-md-8">
-					<h1>Contact Us</h1>
-					<img src="./img/contact_image.jpg" alt="Contact Us">
+					<h3>Contact Us</h3>
+					<div class="hidden-xs">
+					<img src="./img/contact_image.jpg" class="img-responsive" alt="Contact Us">
 					<p>XYZ Corp creates all kinds of things. We also create different sorts of stuff.					     Wouldn't you like to know more?!</p> <p> Please complete the form to the right and we'll be in touch.</p>
-
+					</div>
 				</div>
 				<div class="col-xs-12 col-md-4">
 				<form>
+					<div class="form-group">
 					<label>First Name</label>
-					<input type="text" name="first-name">
+					<input type="text" name="first-name" class="form-control">
+					</div>
+					<div class="form-group">
 					<label>Last Name</label>
-					<input type="text" name="last-name">
+					<input type="text" name="last-name" class="form-control">
+					</div>
+					<div class="form-group">
 					<label>Email Address</label>
-					<input type="email" name="email">
+					<input type="email" name="email" class="form-control">
+					</div>
+					<div class="form-group">
 					<label>Company</label>
-					<input type="text" name="company">
-					<div class="radio">
-						<label><input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">Things</label>
+					<input type="text" name="company" class="form-control">
 					</div>
+					<div class="form-group">
+					I am interested in:
 					<div class="radio">
-						<label><input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">Stuff</label>
+						<label><input type="radio" name="optionsRadios" id="optionsRadios1" value="Things" class="form-control">Things</label>
 					</div>
-					<input type="submit" value="Submit" class="btn btn-success" >
+					</div>
+					<div class="form-group">
+					<div class="radio">
+						<label><input type="radio" name="optionsRadios" id="optionsRadios2" value="Stuff" class="form-control">Stuff</label>
+					</div>
+					</div>
+					<input type="submit" value="Submit" class="btn btn-success form-control" >
 				</form>
 				</div>
 			</div>
+		</main>
 			<!-- footer bar here !-->
 			<footer>
-				<ul>
-					<a href="#">Who We Are</a> |
-					<a href="#">What We Do</a> |
-					<a href="#">What Kind of Things</a> |
-					<a href="#">What Sort of Stuff</a> | 
-					<a href="#">Contact</a>
-				</ul>
-				<p>Copyright &copy 2016 XYX Corp. All rights reserved.</p>
+				<div class="row">
+					<div class="col-xs-8 col-md-8 col-md-offset-3 col-xs-offset-3">
+						<a href="#">Who We Are</a> |
+						<a href="#">What We Do</a> |
+						<a href="#">What Kind of Things</a> |
+						<a href="#">What Sort of Stuff</a> | 
+						<a href="#">Contact</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-6 col-md-6 col-md-offset-4 col-xs-offset-4">
+						<p>Copyright &copy 2016 XYZ Corp. All rights reserved.</p>
+					</div>
+				</div>
 			</footer>
 		</div>
 	</body>
