Hide text on mobile device

--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -13,10 +13,10 @@
 			<!-- nav bar here !-->
 			<header>
 				<div class="row" style="background-color:powderblue">
-					<div class="col-md-6">
+					<div class="col-xs-12 col-md-6">
 					<img src="./img/logo.png" alt="XYC Corp">
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6 hidden-xs">
 					<p>Creating Things...and Stuff</p>
 					</div>
 				</div>
