Fix radio buttons

--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -60,12 +60,12 @@
 					<div class="form-group">
 					I am interested in:
 					<div class="radio">
-						<label><input type="radio" name="optionsRadios" id="optionsRadios1" value="Things" class="form-control">Things</label>
+						<label><input type="radio" name="optionsRadios" id="optionsRadios1" value="Things">Things</label>
 					</div>
 					</div>
 					<div class="form-group">
 					<div class="radio">
-						<label><input type="radio" name="optionsRadios" id="optionsRadios2" value="Stuff" class="form-control">Stuff</label>
+						<label><input type="radio" name="optionsRadios" id="optionsRadios2" value="Stuff">Stuff</label>
 					</div>
 					</div>
 					<input type="submit" value="Submit" class="btn btn-success form-control" >
