Add toggle menu on mobile device

--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -21,14 +21,19 @@
 					</div>
 				</div>
 			</header>
-			<nav>
-				<ul class="nav navbar-nav">
-					<li><a href="#">WHO WE ARE</a></li>
-					<li><a href="#">WHAT WE DO</a></li>
-					<li><a href="#">WHAT KIND OF THINGS</a></li>
-					<li><a href="#">WHAT SORT OF STUFF</a></li>
-					<li><a href="#">CONTACT</a></li>
-				</ul>
+			<nav class="navbar" style="background-color:powderblue">
+				<div class="container-fluid">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span><img src="./img/hamburger_menu.png"></span></button>
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li><a href="#">WHO WE ARE</a></li>
+							<li><a href="#">WHAT WE DO</a></li>
+							<li><a href="#">WHAT KIND OF THINGS</a></li>
+							<li><a href="#">WHAT SORT OF STUFF</a></li>
+							<li><a href="#">CONTACT</a></li>
+						</ul>
+					</div>
+				</div>
 			</nav>
 			<main>
 			<div class="row">
