--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -10,20 +10,23 @@
 	</head>
 	<body>
 		<div class="container">
+
 			<!-- nav bar here !-->
-			<header>
-				<div class="row" style="background-color:powderblue">
-					<div class="col-xs-12 col-md-6">
-					<img src="./img/logo.png" alt="XYC Corp">
-					</div>
-					<div class="col-md-6 hidden-xs">
-					<p>Creating Things...and Stuff</p>
-					</div>
-				</div>
-			</header>
 			<nav class="navbar" style="background-color:powderblue">
 				<div class="container-fluid">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span><img src="./img/hamburger_menu.png"></span></button>
+
+					<div class="row" style="background-color:powderblue;">
+						<div class="col-xs-8 col-md-6">
+							<img src="./img/logo.png" alt="XYC Corp">
+						</div>
+						<div class="col-md-6 hidden-xs">
+							<p>Creating Things...and Stuff</p>
+						</div>
+						<div class="col-xs-4 hidden-sm hidden-md hidden-lg">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span><img src="./img/hamburger_menu.png"></span></button>
+						</div>
+					</div>
+
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 							<li><a href="#">WHO WE ARE</a></li>
@@ -33,34 +36,36 @@
 							<li><a href="#">CONTACT</a></li>
 						</ul>
 					</div>
-				</div>
-			</nav>
+
+					</div>
+				</nav>
+
 			<main>
 			<div class="row">
 				<div class="col-xs-12 col-md-8">
 					<h3>Contact Us</h3>
 					<div class="hidden-xs">
-					<img src="./img/contact_image.jpg" class="img-responsive" alt="Contact Us">
-					<p>XYZ Corp creates all kinds of things. We also create different sorts of stuff.					     Wouldn't you like to know more?!</p> <p> Please complete the form to the right and we'll be in touch.</p>
+						<img src="./img/contact_image.jpg" class="img-responsive" alt="Contact Us">
+						<p>XYZ Corp creates all kinds of things. We also create different sorts of stuff. Wouldn't you like to know more?!</p> <p> Please complete the form to the right and we'll be in touch.</p>
 					</div>
 				</div>
 				<div class="col-xs-12 col-md-4">
 				<form>
 					<div class="form-group">
-					<label>First Name</label>
-					<input type="text" name="first-name" class="form-control">
+						<label>First Name</label>
+						<input type="text" name="first-name" class="form-control">
 					</div>
 					<div class="form-group">
-					<label>Last Name</label>
-					<input type="text" name="last-name" class="form-control">
+						<label>Last Name</label>
+						<input type="text" name="last-name" class="form-control">
 					</div>
 					<div class="form-group">
-					<label>Email Address</label>
-					<input type="email" name="email" class="form-control">
+						<label>Email Address</label>
+						<input type="email" name="email" class="form-control">
 					</div>
 					<div class="form-group">
-					<label>Company</label>
-					<input type="text" name="company" class="form-control">
+						<label>Company</label>
+						<input type="text" name="company" class="form-control">
 					</div>
 					<div class="form-group">
 					I am interested in:
@@ -81,16 +86,16 @@
 			<!-- footer bar here !-->
 			<footer>
 				<div class="row">
-					<div class="col-xs-8 col-md-8 col-md-offset-3 col-xs-offset-3">
+					<div class="col-xs-12 col-md-8 col-md-offset-3">
 						<a href="#">Who We Are</a> |
 						<a href="#">What We Do</a> |
 						<a href="#">What Kind of Things</a> |
-						<a href="#">What Sort of Stuff</a> | 
+						<a href="#">What Sort of Stuff</a> |
 						<a href="#">Contact</a>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-6 col-md-6 col-md-offset-4 col-xs-offset-4">
+					<div class="col-xs-12 col-md-6 col-md-offset-4 col-xs-offset-1">
 						<p>Copyright &copy 2016 XYZ Corp. All rights reserved.</p>
 					</div>
 				</div>
