Add form-box border

--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -50,7 +50,8 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-md-4">
-				<form>
+					<div class="form-box">
+						<form>
 					<div class="form-group">
 						<label>First Name</label>
 						<input type="text" name="first-name" class="form-control">
@@ -80,6 +81,7 @@
 					</div>
 					<input type="submit" value="Submit" class="btn btn-success form-control" >
 				</form>
+					</div> <!--form-box !-->
 				</div>
 			</div>
 		</main>
