--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -12,22 +12,22 @@
 		<div class="container">
 
 			<!-- nav bar here !-->
-			<nav class="navbar" style="background-color:powderblue">
+			<nav class="navbar">
 				<div class="container-fluid">
 
-					<div class="row" style="background-color:powderblue;">
+					<div class="row" style="background-color:#737373;">
 						<div class="col-xs-8 col-md-6">
-							<img src="./img/logo.png" alt="XYC Corp">
+							<img src="./img/logo.png" alt="XYC Corp" class="nav-logo">
 						</div>
 						<div class="col-md-6 hidden-xs">
-							<p>Creating Things...and Stuff</p>
+							<h2>Creating Things...and Stuff</h2>
 						</div>
 						<div class="col-xs-4 hidden-sm hidden-md hidden-lg">
 							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span><img src="./img/hamburger_menu.png"></span></button>
 						</div>
 					</div>
 
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background-color:#d9d9d9;">
 						<ul class="nav navbar-nav">
 							<li><a href="#">WHO WE ARE</a></li>
 							<li><a href="#">WHAT WE DO</a></li>
@@ -86,7 +86,7 @@
 			</div>
 		</main>
 			<!-- footer bar here !-->
-			<footer>
+			<footer style="background-color:#d9d9d9;">
 				<div class="row">
 					<div class="col-xs-12 col-md-8 col-md-offset-3">
 						<a href="#">Who We Are</a> |
