Add footer styles

--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -20,7 +20,7 @@
 							<img src="./img/logo.png" alt="XYC Corp" class="nav-logo">
 						</div>
 						<div class="col-md-6 hidden-xs">
-							<h2>Creating Things...and Stuff</h2>
+							<h2 class="text-right">Creating Things...and Stuff</h2>
 						</div>
 						<div class="col-xs-4 hidden-sm hidden-md hidden-lg">
 							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span><img src="./img/hamburger_menu.png"></span></button>
@@ -87,7 +87,7 @@
 		</main>
 			<!-- footer bar here !-->
 			<footer style="background-color:#d9d9d9;">
-				<div class="row">
+				<div class="row footer-links">
 					<div class="col-xs-12 col-md-8 col-md-offset-3">
 						<a href="#">Who We Are</a> |
 						<a href="#">What We Do</a> |
@@ -96,7 +96,7 @@
 						<a href="#">Contact</a>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row footer-copyright">
 					<div class="col-xs-12 col-md-6 col-md-offset-4 col-xs-offset-1">
 						<p>Copyright &copy 2016 XYZ Corp. All rights reserved.</p>
 					</div>
