--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -19,7 +19,7 @@
 						<div class="col-xs-8 col-md-6">
 							<img src="./img/logo.png" alt="XYC Corp" class="nav-logo">
 						</div>
-						<div class="col-md-6 hidden-xs">
+						<div class="col-md-6 hidden-xs header-right-text">
 							<h2 class="text-right">Creating Things...and Stuff</h2>
 						</div>
 						<div class="col-xs-4 hidden-sm hidden-md hidden-lg">
@@ -79,7 +79,7 @@
 						<label><input type="radio" name="optionsRadios" id="optionsRadios2" value="Stuff">Stuff</label>
 					</div>
 					</div>
-					<input type="submit" value="Submit" class="btn btn-success form-control" >
+					<input type="submit" value="SUBMIT" class="btn btn-success form-control" >
 				</form>
 					</div> <!--form-box !-->
 				</div>
