--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -9,31 +9,33 @@
 		<link href="./css/styles.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="container">
 
+		<div class="container">
 			<!-- nav bar here !-->
 			<nav class="navbar">
 				<div class="container-fluid">
 
-					<div class="row" style="background-color:#737373;">
+				<header>
+					<div class="row" style="background-color:#003E74; border-bottom: 1px solid #000000;">
 						<div class="col-xs-8 col-md-6">
 							<img src="./img/logo.png" alt="XYC Corp" class="nav-logo">
 						</div>
 						<div class="col-md-6 hidden-xs header-right-text">
 							<h2 class="text-right">Creating Things...and Stuff</h2>
 						</div>
-						<div class="col-xs-4 hidden-sm hidden-md hidden-lg">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span><img src="./img/hamburger_menu.png"></span></button>
+						<div class="col-xs-4 hidden-sm hidden-md hidden-lg container-button-toggle">
+							<button type="button" class="navbar-toggle collapsed header-button-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span><img src="./img/hamburger_menu.png"></span></button>
 						</div>
 					</div>
+				</header>
 
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background-color:#d9d9d9;">
-						<ul class="nav navbar-nav">
-							<li><a href="#">WHO WE ARE</a></li>
-							<li><a href="#">WHAT WE DO</a></li>
-							<li><a href="#">WHAT KIND OF THINGS</a></li>
-							<li><a href="#">WHAT SORT OF STUFF</a></li>
-							<li><a href="#">CONTACT</a></li>
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background-color:#E9EAED;">
+						<ul class="nav navbar-nav nav-links">
+							<li><a href="#"><strong>WHO WE ARE</strong></a></li>
+							<li><a href="#"><strong>WHAT WE DO</strong></a></li>
+							<li><a href="#"><strong>WHAT KIND OF THINGS</strong></a></li>
+							<li><a href="#"><strong>WHAT SORT OF STUFF</strong></a></li>
+							<li><a href="#"><strong>CONTACT</strong></a></li>
 						</ul>
 					</div>
 
@@ -41,15 +43,15 @@
 				</nav>
 
 			<main>
-			<div class="row">
-				<div class="col-xs-12 col-md-8">
-					<h3>Contact Us</h3>
+			<div class="row main-row">
+				<div class="col-xs-12 col-md-8 main-header-text-container">
+					<h3 class="main-header-text">Contact Us</h3>
 					<div class="hidden-xs">
-						<img src="./img/contact_image.jpg" class="img-responsive" alt="Contact Us">
+						<img src="./img/contact_image.jpg" class="img-responsive main-image" alt="Contact Us">
 						<p>XYZ Corp creates all kinds of things. We also create different sorts of stuff. Wouldn't you like to know more?!</p> <p> Please complete the form to the right and we'll be in touch.</p>
 					</div>
 				</div>
-				<div class="col-xs-12 col-md-4">
+				<div class="col-xs-12 col-md-4 form-container">
 					<div class="form-box">
 						<form>
 					<div class="form-group">
@@ -69,15 +71,13 @@
 						<input type="text" name="company" class="form-control">
 					</div>
 					<div class="form-group">
-					I am interested in:
-					<div class="radio">
-						<label><input type="radio" name="optionsRadios" id="optionsRadios1" value="Things">Things</label>
-					</div>
-					</div>
-					<div class="form-group">
-					<div class="radio">
-						<label><input type="radio" name="optionsRadios" id="optionsRadios2" value="Stuff">Stuff</label>
-					</div>
+					<label>I am interested in:</label>
+						<div class="radio form-radio">
+							<label><input type="radio" name="optionsRadios" id="optionsRadios1" value="Things">Things</label>
+						</div>
+						<div class="radio form-radio">
+							<label><input type="radio" name="optionsRadios" id="optionsRadios2" value="Stuff">Stuff</label>
+						</div>
 					</div>
 					<input type="submit" value="SUBMIT" class="btn btn-success form-control" >
 				</form>
@@ -86,7 +86,7 @@
 			</div>
 		</main>
 			<!-- footer bar here !-->
-			<footer style="background-color:#d9d9d9;">
+			<footer style="background-color:#E9EAED;">
 				<div class="row footer-links">
 					<div class="col-xs-12 col-md-8 col-md-offset-3">
 						<a href="#">Who We Are</a> |
