--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -10,18 +10,17 @@
 	</head>
 	<body>
 
-		<div class="container">
+		<div class="container" >
 			<!-- nav bar here !-->
 			<nav class="navbar">
-				<div class="container-fluid">
 
 				<header>
-					<div class="row" style="background-color:#003E74; border-bottom: 1px solid #000000;">
+					<div class="row nav-row" style="background-color:#003E74; border-bottom: 1px solid #000000;">
 						<div class="col-xs-8 col-md-6">
 							<img src="./img/logo.png" alt="XYC Corp" class="nav-logo">
 						</div>
 						<div class="col-md-6 hidden-xs header-right-text">
-							<h2 class="text-right">Creating Things...and Stuff</h2>
+							<h2 class="text-right" >Creating Things...and Stuff</h2>
 						</div>
 						<div class="col-xs-4 hidden-sm hidden-md hidden-lg container-button-toggle">
 							<button type="button" class="navbar-toggle collapsed header-button-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span><img src="./img/hamburger_menu.png"></span></button>
@@ -39,7 +38,6 @@
 						</ul>
 					</div>
 
-					</div>
 				</nav>
 
 			<main>
