--- a/xyz_corp.html
+++ b/xyz_corp.html
@@ -67,22 +67,22 @@
 				</div>
 				<div class="col-xs-12 col-md-4 form-container">
 					<div class="form-box">
-						<form>
+				<form onsubmit="myFunction()">
 					<div class="form-group">
 						<label>First Name</label>
-						<input type="text" name="firstname" class="form-control">
+						<input type="text" name="firstname" class="form-control" id="firstname">
 					</div>
 					<div class="form-group">
 						<label>Last Name</label>
-						<input type="text" name="lastname" class="form-control">
+						<input type="text" name="lastname" class="form-control" id="lastname">
 					</div>
 					<div class="form-group">
 						<label>Email Address</label>
-						<input type="email" name="email" class="form-control">
+						<input type="email" name="email" class="form-control" id="email">
 					</div>
 					<div class="form-group">
 						<label>Company</label>
-						<input type="text" name="company" class="form-control">
+						<input type="text" name="company" class="form-control" id="company">
 					</div>
 					<div class="form-group">
 					<label>I am interested in:</label>
@@ -93,7 +93,7 @@
 							<label><input type="radio" name="interestIn" id="optionsRadios2" value="Stuff">Stuff</label>
 						</div>
 					</div>
-					<input type="submit" value="SUBMIT" class="btn btn-success form-control form-btn-submit" >
+					<input id="submit" type="button" value="SUBMIT" class="btn btn-success form-control form-btn-submit" >
 				</form>
 					</div>
 				</div>
@@ -120,8 +120,48 @@
 		</div>
 	</footer>
 
-</body>
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title text-center" id="myModalLabel">Thank You</h4>
+	      </div>
+	      <div class="modal-body text-center">
+				<div class="col-md-12">
+	        Your information has been successfully sent and we appreciate you contacting us. We'll be in touch.
+				</div>
+	      </div>
+	      <div class="modal-footer" style="border: none;">
+	        <button type="submit" class="btn btn-default" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 
-	<script src="./js/jquery.js"></script>
-	<script src="./js/bootstrap.js"></script>
+
+</body>
+<script src="./js/jquery.js"></script>
+<script src="./js/bootstrap.js"></script>
+	<script>
+
+ $("#submit").click(function () {
+		$.ajax({
+			method: "POST",
+			url: 'http://httpbin.org/post',
+			data: { key: "Data Goes Here" }
+		})
+		.always(function() {
+			// Clear input values
+			$('input#firstname').val("");
+			$('input#lastname').val("");
+			$('input#email').val("");
+			$('input#company').val("");
+			$('input#optionsRadios1').attr("checked", false);
+			$('input#optionsRadios2').attr("checked", false);
+			$('#myModal').modal();
+		})
+	});
+
+	</script>
 </html>
